--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>blah</title>
+    <title>Wesele Ani i Wojtka</title>
   </head>
   <body>
-    <p>Ania i Wojtek</p>
+    <h1>Menu weselne</h1>
+    <h2>Przystawka</h2>
+    <p>sałatka z rukoli, cytrusy, orzechy, prażone ziarna, dressing z marakui</p>
+    <h2>Zupa</h2>
+    <p>tradycyjny rosół drobiowy, makaron, marchew, natka pietruszki</p>
+    <h2>Danie główne</h2>
+    <p>zrazy wieprzowe, grzyby, puree ziemniaczane, sos myśliwski, surówka z białej kapusty</p>
+    <h2>Deser</h2>
+    <p>ciasto czekoladowe nemesis, chantilly karmelowe, lody waniliowe, coulis wiśniowe</p>
+    <h2>Kolacja 1</h2> rolada drobiowa, szpinak, feta, suszone pomidory, sos serowy, gnocchi, selekcja sałat, sos vinaigrette <h2>Kolacja 2</h2>
+    <p>barszcz czerwony, krokiet z mięsem</p>
   </body>
 </html>
