--- a/index.html
+++ b/index.html
@@ -3,18 +3,103 @@
   <head>
     <meta charset="utf-8" />
     <title>Wesele Ani i Wojtka</title>
+    <style>
+      sup {
+        color: red;
+      }
+      .allergens {
+        color: red;
+      }
+      p {
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
     <h1>Menu weselne</h1>
-    <h2>Przystawka</h2>
-    <p>sałatka z rukoli, cytrusy, orzechy, prażone ziarna, dressing z marakui</p>
-    <h2>Zupa</h2>
+    <h3>Przystawka</h3>
+    <p>
+      sałatka z rukoli, cytrusy, orzechy, prażone ziarna, dressing z marakui
+    </p>
+    <h3>Zupa</h3>
     <p>tradycyjny rosół drobiowy, makaron, marchew, natka pietruszki</p>
-    <h2>Danie główne</h2>
-    <p>zrazy wieprzowe, grzyby, puree ziemniaczane, sos myśliwski, surówka z białej kapusty</p>
-    <h2>Deser</h2>
-    <p>ciasto czekoladowe nemesis, chantilly karmelowe, lody waniliowe, coulis wiśniowe</p>
-    <h2>Kolacja 1</h2> rolada drobiowa, szpinak, feta, suszone pomidory, sos serowy, gnocchi, selekcja sałat, sos vinaigrette <h2>Kolacja 2</h2>
+    <h3>Danie główne</h3>
+    <p>
+      zrazy wieprzowe, grzyby, puree ziemniaczane, sos myśliwski, surówka z
+      białej kapusty
+    </p>
+    <h3>Deser</h3>
+    <p>
+      ciasto czekoladowe nemesis, chantilly karmelowe, lody waniliowe, coulis
+      wiśniowe
+    </p>
+    <h3>Kolacja 1</h3>
+    <p>
+      rolada drobiowa, szpinak, feta, suszone pomidory, sos serowy, gnocchi,
+      selekcja sałat, sos vinaigrette
+    </p>
+    <h3>Kolacja 2</h3>
     <p>barszcz czerwony, krokiet z mięsem</p>
+    <h2>Menu bufetowe</h2>
+    <h3>Sałatki</h3>
+    <ul>
+      <li>sałatka jarzynowa <sup>2,3</sup></li>
+      <li>sałatka gyros <sup>2</sup></li>
+      <li>sałatka śledziowa <sup>2,3</sup></li>
+    </ul>
+    <h3>Zimna płyta</h3>
+    <ul>
+      <li>deska serów regionalnych <sup>2</sup></li>
+      <li>karkówka szpikowana czosnkiem</li>
+      <li>paluszki drobiowe w sezamie, sos czosnkowy <sup>1,2,3</sup></li>
+      <li>tymbaliki drobiowe z warzywami <sup>3</sup></li>
+      <li>mix bułeczek i chlebków <sup>1</sup></li>
+    </ul>
+    <h3>Desery porcjowane</h3>
+    <ul>
+      <li>panna Cotta <sup>1,3</sup></li>
+      <li>makaroniki <sup>1,2,3</sup></li>
+    </ul>
+    <h3>Ciasta</h3>
+    <ul>
+      <li>sernik wiedeński <sup>1,2,3</sup></li>
+      <li>tradycyjna szarlotka <sup>1,2,3</sup></li>
+      <li>ciasto w-z <sup>1,2,3</sup></li>
+    </ul>
+    <h3>Wiejska chata</h3>
+    <p>
+      udziec wieprzowy, kompozycja tradycyjnych wędlin, kiełbasy, kabanosy,
+      mięsa pieczone, pasztety, salceson, kaszanka, wędzone żeberka, swojski
+      smalec, pikle, wiejski chleb, żurek rzeszowski
+    </p>
+    <h3>Stół z alkoholami</h3>
+    <p>
+      Zapraszamy do degustacji różnych rodzajów whiskey oraz wina białego i
+      czerwonego
+    </p>
+    <h2>Menu specjalne (bez alergenów)</h2>
+    <h3>Przystawka</h3>
+    <p>mix sałat/pierś z kaczki/owoce/oliwa</p>
+    <h3>Zupa</h3>
+    <p>bulion drobiowy/warzywa</p>
+    <h3>Danie główne</h3>
+    <p>
+      polędwiczka wieprzowa, sos z czerwonego wina, puree ziemniaczane, duszony
+      szpinak
+    </p>
+    <h3>Deser</h3>
+    <p>sałatka owocowa</p>
+    <h3>Kolacja 1</h3>
+    <p>pierś z kaczki, sos pomarańczowy, ryż, jabłka</p>
+    <h3>Kolacja 2</h3>
+    <p>barszcz czerwony, krokiet z mięsem</p>
+    <div class="allergens">
+      <h4>Alergeny</h4>
+      <ol>
+        <li>gluten</li>
+        <li>laktoza</li>
+        <li>jaja</li>
+      </ol>
+    </div>
   </body>
 </html>
