--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </p>
     <h3>Stół z alkoholami</h3>
     <p>
-      Zapraszamy do degustacji różnych rodzajów whiskey oraz wina białego i
+      Zapraszamy do degustacji różnych rodzajów whisky oraz wina białego i
       czerwonego
     </p>
     <br />
