--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       ul {
         margin: 0;
       }
+      ol {
+        margin: 0;
+      }
     </style>
   </head>
   <body>
@@ -36,12 +39,12 @@
       ciasto czekoladowe nemesis, chantilly karmelowe, lody waniliowe, coulis
       wiśniowe
     </p>
-    <h3>Kolacja 1</h3>
+    <h3>Kolacja I</h3>
     <p>
       rolada drobiowa, szpinak, feta, suszone pomidory, sos serowy, gnocchi,
       selekcja sałat, sos vinaigrette
     </p>
-    <h3>Kolacja 2</h3>
+    <h3>Kolacja II</h3>
     <p>barszcz czerwony, krokiet z mięsem</p>
     <br />
     <h2>Menu bufetowe</h2>
@@ -80,7 +83,7 @@
     <h3>Stół z alkoholami</h3>
     <p>
       Zapraszamy do degustacji różnych rodzajów whisky oraz wina białego i
-      czerwonego
+      czerwonego.
     </p>
     <br />
     <h2>Menu specjalne (bez alergenów)</h2>
@@ -95,10 +98,10 @@
     </p>
     <h3>Deser</h3>
     <p>sałatka owocowa</p>
-    <h3>Kolacja 1</h3>
+    <h3>Kolacja I</h3>
     <p>pierś z kaczki, sos pomarańczowy, ryż, jabłka</p>
-    <h3>Kolacja 2</h3>
-    <p>barszcz czerwony, krokiet z mięsem</p>
+    <h3>Kolacja II</h3>
+    <p>krem z pietruszki, olej z pestek dynii</p>
     <br />
     <div class="allergens">
       <h4>Alergeny</h4>
